[project]
name = "datalinking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]